--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -47,7 +47,7 @@
               = link_to "Sign Out", destroy_user_session_path, method: :delete
 
 
-    /! /.nav-collapse
+    /! /.navbar-collapse
 
 #LoginModal.modal.fade
   .modal-dialog
