Revert "Style changes to front/library change, fix js errors due to turbolinkes"
This reverts commit b23f7849cba4fbd8db7051815ad829ca1452db24.

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -47,7 +47,7 @@
               = link_to "Sign Out", destroy_user_session_path, method: :delete
 
 
-    /! /.navbar-collapse
+    /! /.nav-collapse
 
 #LoginModal.modal.fade
   .modal-dialog
