--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -1,260 +1,309 @@
 $cart-view-width: 250px;
 
 .media-list {
-    margin-bottom: 2rem;
-    padding: 0;
-    font-size: 1.6rem;
+  margin-bottom: 2rem;
+  padding: 0;
+  font-size: 1.6rem;
 }
 
 .collapsed-book-tile {
-    height: 180px;
-    padding: 10px;
+  height: 180px;
+  padding: 10px;
 }
 
 .media-heading {
-    font-size: 2.8rem;
-    margin-top: 1.4rem;
-    margin-bottom: 1.4rem;
+  font-size: 2.8rem;
+  margin-top: 1.4rem;
+  margin-bottom: 1.4rem;
 }
 
 .collapsed-book-img-box {
-    overflow: auto;
-    width: 160px;
-    height: 160px;
+  overflow: auto;
+  width: 160px;
+  height: 160px;
 }
 
 .collapsed-book-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 160px;
+}
+
+.collapsed-book-desc {
+  white-space: nowrap;
+  display: block;
+  max-height: 3rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.expanded-book-tile {
+  min-height: 360px;
+  padding: 20px;
+  background-color: white;
+}
+
+.expanded-book-img-box {
+  overflow: auto;
+  width: 320px;
+  height: 320px;
+}
+
+.expanded-book-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 320px;
+}
+
+.expanded-book-desc {
+  display: block;
+  overflow: hidden;
+}
+
+.book-tags {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.book-tag {
+  display: inline-block;
+  margin-right: 0.4rem;
+  margin-bottom: 0.4rem;
+  font-size: 1.4rem;
+}
+
+.expand-enter {
+  height: 180px;
+  overflow: hidden;
+  transition: height .5s;
+
+  .expanded-book-tile {
+    min-height: 180px;
+    padding: 10px;
+    transition: all .5s;
+  }
+
+  .expanded-book-img-box {
+    overflow: auto;
+    width: 160px;
+    height: 160px;
+    transition: all .5s;
+  }
+
+  .expanded-book-img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     max-height: 160px;
-}
+    transition: all .5s;
+  }
 
-.collapsed-book-desc {
-    white-space: nowrap;
+  .expanded-book-desc {
     display: block;
     max-height: 3rem;
     overflow: hidden;
-    text-overflow: ellipsis;
+    transition: all .5s;
+  }
 }
 
-.expanded-book-tile {
-    min-height: 360px;
-    padding: 20px;
+.expand-enter.expand-enter-active {
+  height: 340px;
+
+  .expanded-book-tile {
+    height: 340px;
+    padding: 10px;
     outline: gray solid thin;
     background-color: white;
-}
+  }
 
-.expanded-book-img-box {
+  .expanded-book-img-box {
     overflow: auto;
     width: 320px;
     height: 320px;
-}
+  }
 
-.expanded-book-img {
+  .expanded-book-img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     max-height: 320px;
-}
+  }
 
-.expanded-book-desc {
+  .expanded-book-desc {
     display: block;
+    max-height: 200px;
     overflow: hidden;
-}
-
-.book-tags {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-.book-tag {
-    display: inline-block;
-    margin-right: 0.4rem;
-    margin-bottom: 0.4rem;
-    font-size: 1.4rem;
-}
-
-.expand-enter {
-    height: 180px;
-    overflow: hidden;
-    transition: height .5s;
-
-    .expanded-book-tile {
-        min-height: 180px;
-        padding: 10px;
-        transition: all .5s;
-    }
-
-    .expanded-book-img-box {
-        overflow: auto;
-        width: 160px;
-        height: 160px;
-        transition: all .5s;
-    }
-
-    .expanded-book-img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        max-height: 160px;
-        transition: all .5s;
-    }
-
-    .expanded-book-desc {
-        display: block;
-        max-height: 3rem;
-        overflow: hidden;
-        transition: all .5s;
-    }
-}
-
-.expand-enter.expand-enter-active {
-    height: 340px;
-
-    .expanded-book-tile {
-        height: 340px;
-        padding: 10px;
-        outline: gray solid thin;
-        background-color: white;
-    }
-
-    .expanded-book-img-box {
-        overflow: auto;
-        width: 320px;
-        height: 320px;
-    }
-
-    .expanded-book-img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        max-height: 320px;
-    }
-
-    .expanded-book-desc {
-        display: block;
-        max-height: 200px;
-        overflow: hidden;
-    }
+  }
 }
 
 .expand-leave {
-    opacity: 0;
-    transition: all .001s;
+  opacity: 0;
+  transition: all .001s;
 }
 
 .expand-leave.expand-leave-active{
-    opacity: 0;
+  opacity: 0;
 }
 
 .collapse-enter {
+  height: 340px;
+  overflow: hidden;
+  transition: height .5s;
+
+  .collapsed-book-tile {
     height: 340px;
+    padding: 10px;
+    outline: gray solid thin;
+    background-color: white;
+    transition: all .5s;
+  }
+
+  .collapsed-book-img-box {
+    overflow: auto;
+    width: 320px;
+    height: 320px;
+    transition: all .5s;
+  }
+
+  .collapsed-book-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 320px;
+    transition: all .5s;
+  }
+
+  .collapsed-book-desc {
+    display: block;
+    max-height: 200px;
     overflow: hidden;
-    transition: height .5s;
-
-    .collapsed-book-tile {
-        height: 340px;
-        padding: 10px;
-        outline: gray solid thin;
-        background-color: white;
-        transition: all .5s;
-    }
-
-    .collapsed-book-img-box {
-        overflow: auto;
-        width: 320px;
-        height: 320px;
-        transition: all .5s;
-    }
-
-    .collapsed-book-img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        max-height: 320px;
-        transition: all .5s;
-    }
-
-    .collapsed-book-desc {
-        display: block;
-        max-height: 200px;
-        overflow: hidden;
-        transition: all .5s;
-    }
+    transition: all .5s;
+  }
 }
 
 .collapse-enter.collapse-enter-active {
+  height: 180px;
+
+  .collapsed-book-tile {
     height: 180px;
+    padding: 10px;
+  }
 
-    .collapsed-book-tile {
-        height: 180px;
-        padding: 10px;
-    }
+  .collapsed-book-img-box {
+    overflow: auto;
+    width: 160px;
+    height: 160px;
+  }
 
-    .collapsed-book-img-box {
-        overflow: auto;
-        width: 160px;
-        height: 160px;
-    }
+  .collapsed-book-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 160px;
+  }
 
-    .collapsed-book-img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        max-height: 160px;
-    }
-
-    .collapsed-book-desc {
-        display: block;
-        max-height: 3rem;
-        overflow: hidden;
-    }
+  .collapsed-book-desc {
+    display: block;
+    max-height: 3rem;
+    overflow: hidden;
+  }
 }
 
 .collapse-leave {
-    opacity: 0;
-    transition: opacity .001s;
+  opacity: 0;
+  transition: opacity .001s;
 }
 
 .collapse-leave.collapse-leave-active{
-    opacity: 0;
+  opacity: 0;
+}
+
+#index-image{
+  height: 40rem;
+  background-image: (url('blue-kid-banner1.jpg'));
+  background-size: cover;
+  padding: 0px;
+  margin-bottom: 108px;
+}
+
+.black-overlay{
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.5;
+  position: relative;
+}
+
+#index-image-text-box{
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+}
+
+.index-image-text{
+  color: white;
+}
+
+#tag-and-searchbar{
+  padding-top: 2rem;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -108px;
+}
+
+#tag-and-searchbar.affix{
+  position: fixed;
+  top: 50px;
+  background-color: #f0f0f0;
+  z-index: 1;
+  margin-top: 0px;
 }
 
 #book-searchbar{
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 83.3333333333%;
 }
 
 #book-tagbar{
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 83.3333333333%;
 }
 
 .bootstrap-tagsinput{
-    padding: 0.5rem;
-    margin-bottom: 0px;
-    background-color: white;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    box-shadow: none;
-    display: block;
+  padding: 0.5rem;
+  margin-bottom: 0px;
+  background-color: white;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  box-shadow: none;
+  display: block;
 }
 
 // Icon image
 .icon-book-img-box {
-    overflow: auto;
-    width: 150px;
-    height: 150px;
+  overflow: auto;
+  width: 150px;
+  height: 150px;
 }
 
 .icon-book-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-height: 150px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 150px;
 }
 
 .icon-book-tile {
-    min-height: 200px;
-    padding: 10px;
-    background-color: white;
+  min-height: 200px;
+  padding: 10px;
+  background-color: white;
 }
