removed extra whitespace

--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -82,6 +82,10 @@
 #informationDisplay {
 }
 
+.partner-text-information > p {
+  margin-bottom: 0px;
+}
+
 .groupContainer {
   padding-left: 50px;
 }
