--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -21,6 +21,7 @@
   min-height: 600px;
   max-height: 600px;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .emptyBottomSpace {
@@ -74,6 +75,7 @@
 }
 
 .mainDisplay {
+  max-height: 600px;
   min-height: 600px;
   overflow: scroll;
   background-color: #ffffff;
