--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -171,3 +171,12 @@
 .underline {
   border-bottom: 2px solid #428bca;
 }
+
+.boundary-line {
+  padding-top: 30px;
+  border-bottom: 2px solid #aaa;
+}
+
+.header-padding {
+  padding-top: 30px;
+}
