create admin_user table to match worldreader schema, create new routes for admin_user, update admin logic for new table, remove role from current user table, renaming book name to title

--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -1,5 +1,5 @@
 h3 Book
 p
-  | Name: #{@book.name if @book.name}
+  | Title: #{@book.Title if @book.Title}
 p
   | Description: #{@book.description if @book.description}
