--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -5,5 +5,5 @@
     li= link_to "Sign In", "#LoginModal", data: {target: "#myModal", toggle: "modal"}
     li= link_to 'Sign up', new_user_registration_path
   - if user_signed_in?
-    - if current_user.admin?
+    - if current_user.kind_of? AdminUser
       li= link_to 'Users', users_path
