--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -13,7 +13,7 @@ row
           img.purchase-img src=purchase.book.image
         .purchase-body
           h3
-            | #{purchase.book.name}
+            | #{purchase.book.title}
           - purchase.book.countries_name.each do |country_name|
             span class="book-tag expanded-book-language label label-success"
               | #{country_name}
