added toggle for recommendation types

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,7 @@
  *= require_tree .
  */
 
+@import "bootstrap3-switch";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "login_page";
