--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -27,7 +27,7 @@
             span.caret
           ul.dropdown-menu role="menu"
             li
-              = link_to "Manage Partners", admin_dashboard_index_path
+              = link_to "Admin Dashboard", admin_dashboard_index_path
             li
               = link_to "Account Settings", user_path(current_user.id)
             li.divider
