adding extra form inputs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
 @import "bootstrap3-switch";
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap-select";
 @import "login_page";
 @import "header";
 
