--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -43,7 +43,7 @@
 }
 
 .addPartnerDisplay {
-  background: white
+  background: #ffffff;
 }
 
 .addPartnerForm {
@@ -51,8 +51,8 @@
 }
 
 .newUserInput {
-  width: 50%;
   margin-bottom: 20px;
+  width: 50%;
 }
 
 .header {
