--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -16,7 +16,7 @@
   margin-left: 8%;
 }
 
-.addButton {
+.add-button {
   float: right;
 }
 
@@ -42,15 +42,15 @@
   font-size: medium;
 }
 
-.addPartnerDisplay {
+.add-partner-display {
   background: #ffffff;
 }
 
-.addPartnerForm {
+.add-partner-form {
   padding: 20px;
 }
 
-.newUserInput {
+.new-user-input {
   margin-bottom: 20px;
   width: 50%;
 }
