--- a/app/assets/stylesheets/purchases.css.scss
+++ b/app/assets/stylesheets/purchases.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Purchases controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.flag {
+  height: 30px;
+  width: 30px;
+  opacity: .15;
+}
+
+td.flagged {
+  background-color: #FFE7E7;
+}
+
+img.flagged {
+  opacity: 1;
+}
