--- a/app/assets/stylesheets/purchases.css.scss
+++ b/app/assets/stylesheets/purchases.css.scss
@@ -4,12 +4,12 @@
 
 .flag {
   height: 30px;
+  opacity: 0.15;
   width: 30px;
-  opacity: .15;
 }
 
 td.flagged {
-  background-color: #FFE7E7;
+  background-color: #ffe7e7;
 }
 
 img.flagged {
