--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -23,21 +23,15 @@
 .listPartners {
   background: white;
   padding: 10px 10px 10px 10px;
-  min-height: 600px;
-  max-height: 600px;
   overflow: scroll;
   overflow-x: hidden;
 }
 
-.emptyBottomSpace {
-  height: 65px;
-}
-
 .noneSelectedDisplay {
   text-align: center;
-  height: 300px;
+  height: 100%;
   position: relative;
-  top: 100px;
+  padding-top: 100px;
   font-style: italic;
   font-size: medium;
 }
@@ -97,9 +91,7 @@
   top: 50px;
 }
 
-.mainDisplay {
-  max-height: 600px;
-  min-height: 600px;
+.partnerDisplay {
   overflow: scroll;
   background-color: #ffffff;
 }
@@ -132,10 +124,34 @@
   padding-right: 50px;
 }
 
+.admin-dash-container {
+  padding-bottom: 15px;
+}
+
+.tabBar {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  top: 119px;
+}
+
 .tabDisplay {
-  min-height: 800px;
-  max-height: 800px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  top: 50px;
+}
+
+.height-100 {
+  height: 100%;
+}
+
+.mainScreen {
   overflow: scroll;
+}
+
+.admin-nav-tabs {
+  margin-top: 3px;
 }
 
 .badge {
@@ -164,12 +180,6 @@
   float: left;
   padding-right: 10px;
   cursor: pointer;
-}
-
-.tabDisplay {
-  min-height: 800px;
-  max-height: 800px;
-  overflow: scroll;
 }
 
 .top-buffer {
