--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -23,20 +23,15 @@
 .listPartners {
   background: white;
   padding: 10px 10px 10px 10px;
-  min-height: 600px;
-  max-height: 600px;
+  overflow: scroll;
   overflow-x: hidden;
-}
-
-.emptyBottomSpace {
-  height: 65px;
 }
 
 .noneSelectedDisplay {
   text-align: center;
-  height: 300px;
+  height: 100%;
   position: relative;
-  top: 100px;
+  padding-top: 100px;
   font-style: italic;
   font-size: medium;
 }
@@ -96,9 +91,8 @@
   top: 50px;
 }
 
-.mainDisplay {
-  max-height: 600px;
-  min-height: 600px;
+.partnerDisplay {
+  overflow: scroll;
   background-color: #ffffff;
 }
 
@@ -128,6 +122,36 @@
 .purchaseDisplay {
   padding-left: 50px;
   padding-right: 50px;
+}
+
+.admin-dash-container {
+  padding-bottom: 15px;
+}
+
+.tabBar {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  top: 119px;
+}
+
+.tabDisplay {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  top: 50px;
+}
+
+.height-100 {
+  height: 100%;
+}
+
+.mainScreen {
+  overflow: scroll;
+}
+
+.admin-nav-tabs {
+  margin-top: 3px;
 }
 
 .badge {
