fix add panel, adjust header margin from top

--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -38,6 +38,7 @@
 
 .add-partner-display {
   background: #ffffff;
+  overflow: scroll;
 }
 
 .add-partner-form {
@@ -50,6 +51,7 @@
 }
 
 .header {
+  margin-top: 10px;
   font-size: x-large;
   text-align: center;
 }
