added price to expaneded tile

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -74,6 +74,10 @@ $cart-view-width: 250px;
   font-size: 1.4rem;
 }
 
+.price {
+  margin-bottom: 1rem;
+}
+
 .expand-enter {
   height: 180px;
   overflow: hidden;
