recommendation list now displays recommendation info

--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -282,3 +282,13 @@
 .list-padding {
   padding: 5px;
 }
+
+.recommendation_display_list {
+  list-style-type: none;
+}
+
+.tag-style {
+  display: inline-block;
+  margin-right: 0.4rem;
+  font-size: 1.4rem;
+}
