adding books to groups

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -317,3 +317,13 @@ $cart-view-width: 250px;
 .project-select {
   margin-right: 20px;
 }
+
+.group-name {
+  display: inline;
+}
+
+.group-name:hover {
+  color: #c0392b;
+  cursor: pointer;
+  cursor: hand;
+}
