--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -41,7 +41,7 @@
               span.caret
             ul.dropdown-menu role="menu"
               li
-                = link_to "My Purchase History", user_path(current_user.id)
+                = link_to "My Booklists", user_booklists_path(current_user.id)
               li
                 = link_to "Account Settings", user_path(current_user.id)
               li.divider
