--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -274,14 +274,13 @@ $cart-view-width: 250px;
   margin-bottom: 1rem;
   margin-left: auto;
   margin-right: auto;
-  width: 83.3333333333%;
+  // width: 83.3333333333%;
 }
 
 #book-tagbar{
   margin-bottom: 1rem;
   margin-left: auto;
   margin-right: auto;
-  width: 83.3333333333%;
 }
 
 .bootstrap-tagsinput{
