add modal to display tag help, no dropdown

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -288,6 +288,8 @@ $cart-view-width: 250px;
   background-color: white;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
   box-shadow: none;
   display: block;
 }
