--- a/app/assets/stylesheets/booklists.css.scss
+++ b/app/assets/stylesheets/booklists.css.scss
@@ -1,7 +1,9 @@
+$red-color: #d9534f;
+
 .booklist-select {
   margin-bottom: 10px;
 }
 
 .booklist-info-red {
-  color: #d9534f;
+  color: $red-color;
 }
