added description to booklist

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -276,6 +276,13 @@ $cart-view-width: 250px;
   margin-right: auto;
 }
 
+.input-bar {
+  width: 80%;
+  margin-bottom: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #book-tagbar{
   margin-bottom: 1rem;
   margin-left: auto;
