tags modal search

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -318,3 +318,12 @@
   padding: 10px;
   background-color: white;
 }
+
+.modal-tag-delete {
+  margin-left: 8px;
+}
+
+.modal-search-btn {
+  float: left;
+  margin-top: 5px;
+}
