updated verbiage on home page

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -3,7 +3,7 @@
     .black-overlay
     #index-image-text-box
       h1.index-image-text Welcome to the Worldreader Extranet
-      p.index-image-text Here, partners can find and purchase books for use with Worldreader e-readers and tablets.
+      p.index-image-text A place to explore the Worldreader digital library for e-readers and tablets.
 
 = react_component "TagModalContent", { level_tags: @level_tags, country_tags: @country_tags, language_tags: @language_tags, genre_tags: @genre_tags }
 
