--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -9,5 +9,12 @@
 
 #library.row
   #booklist.col-md-10.col-md-offset-1
-    = react_component 'BookList', {books: @books, searchTerm: "", tags: @tags,
-        booklist: @booklist}
+    = react_component 'BookList', {       \ 
+        current_user: @current_user,      \
+        books: @books,                    \
+        searchTerm: "",                   \
+        tags: @tags,                      \
+        booklist: @booklist,              \
+        user_booklists: @user_booklists,  \
+        all_tags: @all_tags               \
+      }
