--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -6,6 +6,8 @@ section
   /   .page-header.h1 Manage Partners
 
   = react_component 'DashboardTabs', {  \
+      auth_token: @auth_token,          \
+      allTags: @all_tags,               \
       countries: @countries,            \
       languages: @languages,            \
       booklists: @booklists             \
