removed gon dependency from book_list tables

--- a/app/views/users/booklists.html.slim
+++ b/app/views/users/booklists.html.slim
@@ -1,4 +1,7 @@
 h1.text-center Booklists
 
 section
-  = react_component 'BookLists', {booklists: @booklists}
+  = react_component 'BookLists', {  \
+      booklists: @booklists,        \
+      current_user: @current_user   \
+    }
