--- a/app/views/book_lists/index.html.slim
+++ b/app/views/book_lists/index.html.slim
@@ -1,1 +1,4 @@
-= react_component "PublishedBookLists", { booklists: @booklists }
+= react_component "PublishedBookLists", { \
+    booklists: @booklists,                \
+    current_user: @current_user           \
+  }
