--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -2,14 +2,16 @@
   #index-image.col-md-12
     .black-overlay
     #index-image-text-box
-      h1.index-image-text Welcome to the Worldreader Extranet
+      h1.index-image-text
+        | Welcome to the Worldreader Extranet
+        sub.beta-subscript BETA
       p.index-image-text A place to explore the Worldreader digital library for e-readers and tablets.
 
 = react_component "TagModalContent", { level_tags: @level_tags, country_tags: @country_tags, language_tags: @language_tags, genre_tags: @genre_tags }
 
 #library.row
   #booklist.col-md-10.col-md-offset-1
-    = react_component 'BookList', {       \ 
+    = react_component 'BookList', {       \
         current_user: @current_user,      \
         books: @books,                    \
         searchTerm: "",                   \
