--- a/app/views/user_notifier/signup_email.erb
+++ b/app/views/user_notifier/signup_email.erb
@@ -7,8 +7,9 @@
     <p>
       You have just been signed up as a partner for Worldreader!
       Please verify your account information by logging into
-      <a href="extranet.worldreader.org">our website</a> with the following
-      credientials:
+      <a href="extranet.worldreader.org">our website</a> with the email <%= @email %>.
+      To access your account for the first time, you will have to create a password by
+      clicking <%= link_to "this link", edit_user_registration_path %>
     </p>
     <div><strong>Email: </strong><%= @email %></div>
     <div><strong>Password: </strong><%= @password %></div>
